@@ -1,136 +1,0 @@
-.\"	$Id$
-.\"
-.\" HylaFAX Facsimile Software
-.\"
-.\" Copyright (c) 1994-1996 Sam Leffler
-.\" Copyright (c) 1994-1996 Silicon Graphics, Inc.
-.\" HylaFAX is a trademark of Silicon Graphics
-.\" 
-.\" Permission to use, copy, modify, distribute, and sell this software and 
-.\" its documentation for any purpose is hereby granted without fee, provided
-.\" that (i) the above copyright notices and this permission notice appear in
-.\" all copies of the software and related documentation, and (ii) the names of
-.\" Sam Leffler and Silicon Graphics may not be used in any advertising or
-.\" publicity relating to the software without the specific, prior written
-.\" permission of Sam Leffler and Silicon Graphics.
-.\" 
-.\" THE SOFTWARE IS PROVIDED "AS-IS" AND WITHOUT WARRANTY OF ANY KIND, 
-.\" EXPRESS, IMPLIED OR OTHERWISE, INCLUDING WITHOUT LIMITATION, ANY 
-.\" WARRANTY OF MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE.  
-.\" 
-.\" IN NO EVENT SHALL SAM LEFFLER OR SILICON GRAPHICS BE LIABLE FOR
-.\" ANY SPECIAL, INCIDENTAL, INDIRECT OR CONSEQUENTIAL DAMAGES OF ANY KIND,
-.\" OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS,
-.\" WHETHER OR NOT ADVISED OF THE POSSIBILITY OF DAMAGE, AND ON ANY THEORY OF 
-.\" LIABILITY, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE 
-.\" OF THIS SOFTWARE.
-.\"
-.if n .po 0
-.ds Fx \fIHyla\s-1FAX\s+1\fP
-.TH CallID ${MANNUM4_5} "May 28, 2001"
-.SH NAME
-callid \- Call identification access control list
-.SH DESCRIPTION
-The \*(Fx configuration parameter
-.B QualifyCID
-specifies whether or not the identity or identifier of an inbound call
-should be checked against an access
-control list before the telephone is answered.
-This both enables call screening against those values and fax routing
-(in faxrcvd's FaxDispatch) based on those values.
-If a modem is attached to a phone line that has 
-Caller-ID or DNIS service, and
-.B QualifyCID
-is non-null, then only the calls identified by
-strings matching 
-.B CIDNumber (CallID1)
-in the file 
-(typically \fBetc/callid\fP) will be answered.
-.PP
-Patterns are specified one per line and must conform to the
-regular expressions syntax specified by
-.SM POSIX
-1003.2; see
-.IR re_format (7).
-Comments may be included; they are introduced with the ``#''
-character and extend to the end of the line.
-Any trailing white space on a line is ignored (for convenience
-when comments are used).
-.PP
-If a line begins with ``!'', then the regular expression identifies
-callers that should be
-.IR rejected ;
-otherwise regular expressions identify clients whose calls
-should be
-.IR accepted .
-The order of patterns in a
-.SM CallID
-file is important.
-When a call is to be answered, the 
-.I faxgetty
-process will compare the phone number presented by the modem
-against the patterns in the access control list
-in the order in which they appear in the file.
-The first pattern that matches the client's number
-is used to decide whether to accept or reject the call.
-If no patterns match the phone number
-then the call is not answered.
-Thus if you want to accept all but a restricted set of calls,
-the last line in the file should be ``^.*$''.
-.PP
-Note that regular expression patterns should be written to
-match a phone number exactly.
-That is, patterns should be of the form:
-.sp .5
-.ti +0.5i
-\fC^<pattern>$\fP
-.PP
-where the ``^'' and ``$'' characters are used to
-specify the start and end of the matching phone number.
-Additionally, regular expression patterns should handle
-white space that may appear in known locations.  For example,
-.sp .5
-.ti +0.5i
-\fC^([+]1){1}[ .-]*415[ .-]*555[ .-]*1212.*$\fP
-.PP
-matches the following phone number strings:
-.sp .5
-.nf
-.RS
-\fC+1.415.555.1212\fP
-\fC    415  555  1212\fP
-\fC1-415-555-1212\fP
-.RE
-.fi
-.PP
-Finally, note that regular expressions can be used to specify
-many numbers with one pattern.
-.SH NOTES
-The
-.B CIDNumber (CallID1)
-configuration parameter described in
-.IR hylafax-config (${MANNUM4_5})
-is used to store call identification information.
-This parameter must be present in the per-modem configuration
-file for call identification screening to function properly.
-If 
-.B QualifyCID
-is defined, but no
-.B CIDNumber (CallID1)
-is specified, then no match will occur and all
-incoming calls will be ignored.
-.PP
-Call identification data is only sent once by the telco or PBX, and the timing of
-its arrival varies upon the telco or PBX and the type of line.  If
-\*(Fx is configured to answer via
-.B RingsBeforeAnswer
-prior to the arrival of the data, then all
-.B CallID
-values will be null.  For example, on US analog lines, caller-ID
-data is usually sent between RINGs 1 and 2.  In this situation,
-.B RingsBeforeAnswer
-should be set to ``2'' or greater.
-.SH "SEE ALSO"
-.IR faxgetty (${MANNUM1_8}),
-.IR hylafax-config (${MANNUM4_5}),
-.IR re_format (7).
